--- a/index.html
+++ b/index.html
@@ -1,35 +1,51 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
-
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Portfolio</title>
+    <title>My Resume.</title>
 </head>
 <body>
-    <h1>My Portfolio.</h1>
-        <h2>Begginer Web Dev.</h2>
+    <h1>My Resume.</h1>
+    <h2>Samuel Ramírez.</h2>
+    <img src = "./PFP.png">
+        <h3>Descrition.</h3>
+            <p>I'm a begginer web developer eager to grow and learn new stuff every day.</p>  
+    <hr>
+        <h3>Relevant Information.</h3>
+            <ul>
+                <h4><li>Education:</h4>
+                        <ul>
+                            <li>Graduated from High School.</li>
+                            <li>Colegio Divino Salvador.</li>
+                            <li>2022.</li>
+                            <br>
+                            <li>Universidad Nacional (Current studies).</li>
+                            <li>2023 - 2024.</li>
+                        </ul>
+                    </li>
+                <h4><li>Skills:</h4>
+                        <ul>
+                            <li>Drawing.</li>
+                            <li>Maths.</li>
+                            <li>English.</li>
+                            <li>Programming.</li>
+                        </ul>
+                </li> 
+                <h4><li>Achievements:</h4>
+                    <ul>
+                        <li>English Course Certification.</li>
+                        <li>Arts Course.</li>
+                    </ul>
+                </li>
+            </ul>
+        <h3>More Info...</h3>
+            <ul>
+                <li><a href = "./hobbies.html">My hobbies.</a></li>
+                <li><a href = "./contact.html">My contacts.</a></li>
+            </ul>
         <hr>
-            <h3><a href = "public/movie-ranking.html">Movie Ranking Project.</a></h3>
-            <img src = "assets/images/MOVIES.png" height = 250 alt = "Movie Ranking Project">
-            <h3><a href = "public/birthday-invite.html">Birthday Invite Project.</a></h3>
-            <img src = "assets/images/BDAY.png" height = 250 alt = "Birthday Invite Project">
-            <hr>
-    <a href = "public/about.html">Learn more about me</a> <br>
-    <a href = "public/contact.html">My contacts</a>
+        <footer>
+            Samuel © 2024.
+        </footer>
 </body>
 </html>
